--- a/pandas_intro.ipynb
+++ b/pandas_intro.ipynb
@@ -6,7 +6,7 @@
       "name": "pandas_intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXzL17TDIjOuBlD7LPlDfc",
+      "authorship_tag": "ABX9TyPWOEdgxiWA+9Be4iI2geAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,29 +540,7 @@
         "id": "bOoSBzRACIgB"
       },
       "source": [
-        "df[df[\"phd\", \"salary\"]].agg(['min','mean','max'])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pqstq4GkGgUP"
-      },
-      "source": [
-        "df"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "A1fylFtvHK8W"
-      },
-      "source": [
-        ""
+        "df[[\"phd\", \"salary\"]].agg(['min','mean','max'])"
       ],
       "execution_count": null,
       "outputs": []
