--- a/Anova_and_Chisquare.ipynb
+++ b/Anova_and_Chisquare.ipynb
@@ -7,13 +7,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Bady9898/R_Python_basics/blob/main/Anova_and_Chisquare.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Bady9898/R_Python_libraries/blob/main/Anova_and_Chisquare.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_WdhooqcDECY"
+        "id": "BNXuKGBKi5Om"
       },
       "source": [
         "# Anova"
@@ -21,24 +21,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "pmwSS47vDECh"
+        "id": "kew7J2IBi5Oo"
       },
       "outputs": [],
       "source": [
         "# Load libraries\n",
         "from sklearn import datasets\n",
         "# Load digits dataset\n",
-        "iris = datasets.load_iris()\n",
-        "import pandas as pd"
+        "iris = datasets.load_iris()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "yPF94v6YDECl"
+        "id": "yoD44lrBi5Op"
       },
       "outputs": [],
       "source": [
@@ -47,25 +46,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "F8gT5HXkDECm",
-        "outputId": "55707631-ebfc-4501-8a44-1946171633df"
+        "id": "vBfULUxhi5Or",
+        "outputId": "4651c6f8-390e-4630-cd86-e0397cb7ea65"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "F_onewayResult(statistic=236.75163298404746, pvalue=7.657188374182084e-71)"
             ]
           },
+          "execution_count": 53,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -73,17 +69,6 @@
         "stats.f_oneway(df.iloc[:,0], df.iloc[:,1],df.iloc[:,2])\n",
         "               "
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Iw_WG4QjDLz6"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
